--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 # Compiled class file
 *.class
-
 # Log file
 *.log
-
 # BlueJ files
 *.ctxt
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -19,5 +15,17 @@
 *.tar.gz
 *.rar
 
+# IdelliJ Idea
+*.iml
+.idea
+config.properties
+tomcat.*
+target
+.DS_STORE
+*.lst
+*.sql
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
